refactor#17: 피드백 수정