@@ -45,7 +45,7 @@ public record OrderDetailResponseDto(
         order.getTotalPrice(),
         order.getOrderStatus(),
         order.getOrderType(),
-        order.getOrderMenuList().stream().map(MenuDto::of).collect(toList()),
+        order.getOrderMenuList().stream().map(MenuDto::of).toList(),
         order.getCreatedAt(),
         order.getUpdatedAt(),
         order.getUpdatedBy()
